--- a/Resources/02_EstimatedLoFGenes/comparison5.ipynb
+++ b/Resources/02_EstimatedLoFGenes/comparison5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,6 +163,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Path to a directory includinf downloaded data\n",
+    "data_dir: str = 'Downloaded_Data'\n",
+    "\n",
     "### Lodading canonical transcripts\n",
     "canonlist = '../01_CanonicalTranscripts/CanonicalTranscripts.exoncount.tsv'\n",
     "canon = pd.read_table(canonlist, sep='\\t', header=0)\n",
@@ -175,7 +178,7 @@
     "phaplo_path = 'Collins_rCNV_2022.dosage_sensitivity_scores.tsv.gz'\n",
     "\n",
     "# G2P data\n",
-    "dd = './DDG2P.csv.gz'\n",
+    "dd = f'{data_dir}/G2P/DDG2P.csv.gz'\n",
     "eye = './EyeG2P.csv.gz'\n",
     "skin = './SkinG2P.csv.gz'\n",
     "cancer = './CancerG2P.csv.gz'\n",
@@ -609,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -949,14 +952,12 @@
     "final_elofs_gene = final_elofs[1]\n",
     "print(len(final_elofs_gene))\n",
     "df_final_elofs = pd.DataFrame(final_elofs_gene, columns=['HGNC_Approved_Symbol'])\n",
-    "ajhg_genes, dcpr_genes, hi_genes, gnomad_genes = create_individual_gene_list(ajhg, alldf, higene, gnomad, *final_conditions)\n",
-    "# Output final gene list as tsv\n",
-    "# df_final_elofs.to_csv(f'final_elofs_{final_conditions[0]}.HGNC.tsv', sep='\\t', index=False)"
+    "ajhg_genes, dcpr_genes, hi_genes, gnomad_genes = create_individual_gene_list(ajhg, alldf, higene, gnomad, *final_conditions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,9 +1028,12 @@
     "final_genes['Curated_by_ClinGenSVI_group'] = final_genes['HGNC_Approved_Symbol'].apply(add_source_info, args=(ajhg_genes,))\n",
     "final_genes['Curated_from_G2P'] = final_genes['HGNC_Approved_Symbol'].apply(add_source_info, args=(dcpr_genes,))\n",
     "\n",
+    "# Fill NaN with \"NA\"\n",
+    "final_genes.fillna('NA', inplace=True)\n",
+    "\n",
+    "# Cast dtype\n",
     "final_genes['HIscore'] = final_genes['HIscore'].astype(pd.Int64Dtype(), errors='ignore')\n",
     "final_genes['pLI'] = final_genes['pLI'].astype(pd.Float64Dtype(), errors='ignore')\n",
-    "\n",
     "\n",
     "# Annotate HGNC IDs\n",
     "final_genes['HGNC_ID'] = final_genes['HGNC_Approved_Symbol'].apply(fetch_hgnc_id_by_approved_symbol)"
@@ -1037,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1102,241 +1106,118 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>SLC8A2</td>\n",
-       "      <td>HGNC:11069</td>\n",
-       "      <td>0.99633</td>\n",
-       "      <td>0.260</td>\n",
-       "      <td>0.842330</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>4.032418</td>\n",
-       "      <td>0.596259</td>\n",
-       "      <td>0.159615</td>\n",
+       "      <td>RARB</td>\n",
+       "      <td>HGNC:9865</td>\n",
+       "      <td>0.99983</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.996622</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>-2.556487</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>0.125948</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>ALX4</td>\n",
-       "      <td>HGNC:450</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.729231</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.506401</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>LGI4</td>\n",
+       "      <td>HGNC:18712</td>\n",
+       "      <td>0.00715</td>\n",
+       "      <td>0.684</td>\n",
+       "      <td>0.243715</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>3.322926</td>\n",
+       "      <td>0.426376</td>\n",
+       "      <td>0.693512</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>COX15</td>\n",
-       "      <td>HGNC:2263</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.327</td>\n",
-       "      <td>0.542884</td>\n",
-       "      <td>30</td>\n",
-       "      <td>2.632254</td>\n",
-       "      <td>0.458082</td>\n",
-       "      <td>1.295393</td>\n",
-       "      <td>True</td>\n",
+       "      <td>TP53RK</td>\n",
+       "      <td>HGNC:16197</td>\n",
+       "      <td>0.000775</td>\n",
+       "      <td>1.651</td>\n",
+       "      <td>0.210387</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>3.384303</td>\n",
+       "      <td>0.471078</td>\n",
+       "      <td>2.174757</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>SMOC1</td>\n",
-       "      <td>HGNC:20318</td>\n",
-       "      <td>0.009467</td>\n",
-       "      <td>0.592</td>\n",
-       "      <td>0.771493</td>\n",
-       "      <td>30</td>\n",
-       "      <td>2.588182</td>\n",
-       "      <td>0.508057</td>\n",
-       "      <td>0.399762</td>\n",
+       "      <td>BHLHE41</td>\n",
+       "      <td>HGNC:16617</td>\n",
+       "      <td>0.99212</td>\n",
+       "      <td>0.206</td>\n",
+       "      <td>0.945621</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>3.483576</td>\n",
+       "      <td>0.409067</td>\n",
+       "      <td>0.517385</td>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>AFF4</td>\n",
-       "      <td>HGNC:17869</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.138</td>\n",
-       "      <td>0.985857</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>0.037189</td>\n",
-       "      <td>0.401863</td>\n",
-       "      <td>0.117420</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3621</th>\n",
-       "      <td>AFF2</td>\n",
-       "      <td>HGNC:3776</td>\n",
-       "      <td>0.99577</td>\n",
-       "      <td>0.275</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.374947</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>MSH6</td>\n",
+       "      <td>HGNC:7329</td>\n",
+       "      <td>0.000037</td>\n",
+       "      <td>0.498</td>\n",
+       "      <td>0.606599</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.827315</td>\n",
+       "      <td>0.423953</td>\n",
+       "      <td>0.853019</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3622</th>\n",
-       "      <td>TSC1</td>\n",
-       "      <td>HGNC:12362</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.118</td>\n",
-       "      <td>0.996392</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3.716618</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.103500</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3623</th>\n",
-       "      <td>AGO3</td>\n",
-       "      <td>HGNC:18421</td>\n",
-       "      <td>0.99997</td>\n",
-       "      <td>0.193</td>\n",
-       "      <td>0.982643</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>5.134615</td>\n",
-       "      <td>0.697415</td>\n",
-       "      <td>0.097046</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3624</th>\n",
-       "      <td>KDM6A</td>\n",
-       "      <td>HGNC:12637</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.481418</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3625</th>\n",
-       "      <td>CP</td>\n",
-       "      <td>HGNC:2295</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.646</td>\n",
-       "      <td>0.398777</td>\n",
-       "      <td>30</td>\n",
-       "      <td>2.859533</td>\n",
-       "      <td>0.353728</td>\n",
-       "      <td>0.625094</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3626 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     HGNC_Approved_Symbol     HGNC_ID       pLI  LOEUF_gnomAD_v2.1.1  \\\n",
-       "0                  SLC8A2  HGNC:11069   0.99633                0.260   \n",
-       "1                    ALX4    HGNC:450      <NA>                  NaN   \n",
-       "2                   COX15   HGNC:2263       0.0                1.327   \n",
-       "3                   SMOC1  HGNC:20318  0.009467                0.592   \n",
-       "4                    AFF4  HGNC:17869       1.0                0.138   \n",
-       "...                   ...         ...       ...                  ...   \n",
-       "3621                 AFF2   HGNC:3776   0.99577                0.275   \n",
-       "3622                 TSC1  HGNC:12362       1.0                0.118   \n",
-       "3623                 AGO3  HGNC:18421   0.99997                0.193   \n",
-       "3624                KDM6A  HGNC:12637      <NA>                  NaN   \n",
-       "3625                   CP   HGNC:2295       0.0                0.646   \n",
+       "  HGNC_Approved_Symbol     HGNC_ID       pLI LOEUF_gnomAD_v2.1.1    pHaplo  \\\n",
+       "0                 RARB   HGNC:9865   0.99983                0.12  0.996622   \n",
+       "1                 LGI4  HGNC:18712   0.00715               0.684  0.243715   \n",
+       "2               TP53RK  HGNC:16197  0.000775               1.651  0.210387   \n",
+       "3              BHLHE41  HGNC:16617   0.99212               0.206  0.945621   \n",
+       "4                 MSH6   HGNC:7329  0.000037               0.498  0.606599   \n",
        "\n",
-       "        pHaplo  HIscore  Enhancer_Gnocchi  Mean_AlphaMissense_pathogenicity  \\\n",
-       "0     0.842330     <NA>          4.032418                          0.596259   \n",
-       "1     0.729231        3          1.506401                               NaN   \n",
-       "2     0.542884       30          2.632254                          0.458082   \n",
-       "3     0.771493       30          2.588182                          0.508057   \n",
-       "4     0.985857     <NA>          0.037189                          0.401863   \n",
-       "...        ...      ...               ...                               ...   \n",
-       "3621       NaN        3               NaN                          0.374947   \n",
-       "3622  0.996392        3          3.716618                               NaN   \n",
-       "3623  0.982643     <NA>          5.134615                          0.697415   \n",
-       "3624       NaN        3               NaN                          0.481418   \n",
-       "3625  0.398777       30          2.859533                          0.353728   \n",
+       "  HIscore Enhancer_Gnocchi Mean_AlphaMissense_pathogenicity  \\\n",
+       "0      NA        -2.556487                               NA   \n",
+       "1      NA         3.322926                         0.426376   \n",
+       "2      NA         3.384303                         0.471078   \n",
+       "3      NA         3.483576                         0.409067   \n",
+       "4     3.0         1.827315                         0.423953   \n",
        "\n",
-       "      Genovo_LOEUF_corrected  Curated_by_ClinGenSVI_group  Curated_from_G2P  \n",
-       "0                   0.159615                        False             False  \n",
-       "1                        NaN                         True              True  \n",
-       "2                   1.295393                         True              True  \n",
-       "3                   0.399762                        False              True  \n",
-       "4                   0.117420                        False             False  \n",
-       "...                      ...                          ...               ...  \n",
-       "3621                     NaN                         True              True  \n",
-       "3622                0.103500                         True              True  \n",
-       "3623                0.097046                        False             False  \n",
-       "3624                     NaN                         True              True  \n",
-       "3625                0.625094                         True             False  \n",
-       "\n",
-       "[3626 rows x 11 columns]"
+       "  Genovo_LOEUF_corrected  Curated_by_ClinGenSVI_group  Curated_from_G2P  \n",
+       "0               0.125948                        False              True  \n",
+       "1               0.693512                         True              True  \n",
+       "2               2.174757                        False              True  \n",
+       "3               0.517385                        False             False  \n",
+       "4               0.853019                         True              True  "
       ]
      },
-     "execution_count": 130,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "final_genes"
+    "final_genes.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cast to float for numeric columns\n",
-    "final_genes = final_genes.astype(\n",
-    "\t{'pLI': float, 'LOEUF_gnomAD_v2.1.1': float, 'pHaplo': float, 'Mean_AlphaMissense_pathogenicity': float}\n",
-    "\t)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_genes.to_csv('Final_eLoF_genes_list/final_genes.tsv', sep='\\t', index=False)"
+    "# Output TSV file\n",
+    "final_genes.to_csv(f'Final_eLoF_genes_list/Supplementary_Data_Estimated_LoF_genes.tsv', sep='\\t', index=False)"
    ]
   },
   {
@@ -1857,22 +1738,6 @@
     "    leg.get_frame().set_alpha(0.5)\n",
     "\n",
     "    return fig, ax"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try: \n",
-    "    __file__\n",
-    "    sys.path.append(os.path.join(os.path.dirname(__file__)))\n",
-    "except NameError:\n",
-    "    Path().resolve()\n",
-    "    sys.path.append(os.path.join(Path().resolve(), '../..'))\n",
-    "\n",
-    "from libs import venn"
    ]
   }
  ],
