--- a/Resources/02_EstimatedLoFGenes/comparison5.ipynb
+++ b/Resources/02_EstimatedLoFGenes/comparison5.ipynb
@@ -33,6 +33,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enstID\tenstVersion\tobserved_genovo_in_frame_indel\tobserved_genovo_missense\tobserved_genovo_synonymous\tobserved_genovo_frameshift_indel\tobserved_genovo_LoF\tobserved_genovo_nonsense\tobserved_genovo_splice_site\tobserved_genovo_stop_loss\texpected_genovo_in_frame_indel\texpected_genovo_missense\texpected_genovo_synonymous\texpected_genovo_frameshift_indel\texpected_genovo_LoF\texpected_genovo_nonsense\texpected_genovo_splice_site\texpected_genovo_stop_loss\texpected_lower_genovo_in_frame_indel\texpected_lower_genovo_missense\texpected_lower_genovo_synonymous\texpected_lower_genovo_frameshift_indel\texpected_lower_genovo_LoF\texpected_lower_genovo_nonsense\texpected_lower_genovo_splice_site\texpected_lower_genovo_stop_loss\tmean_AN\tgenovo_synonymous_OE_ratio_uncorrected\tlowess_factor\texpected_genovo_missense_corrected\texpected_genovo_synonymous_corrected\texpected_genovo_frameshift_indel_corrected\texpected_genovo_LoF_corrected\texpected_genovo_nonsense_corrected\texpected_genovo_splice_site_corrected\texpected_lower_genovo_LoF_corrected\tgenovo_LOEUF_corrected\tgenovo_LoF_OE_ratio\n",
+      "ENST00000394484\t1\t0\t4\t2\t0\t0\t0\t0\t1\t0.35124555\t25.57118\t12.294623\t1.3470856\t3.9589243\t0.78056836\t1.8312702\t0.4085776\t0.07194245\t19.15625\t7.9142857\t0.20661157\t1.96\t0.11086474\t1.0762943\t0.075987846\t50235.66666666670\t0.162672739\t0.210641294\t5.386346455\t2.589755303\t0.283751854\t0.833912939\t0.16441993\t0.385741125\t0.412856937\t0\t0.374837057\n",
+      "ENST00000329516\t3\t0\t3\t0\t1\t1\t0\t0\t0\t13.524261\t883.462\t327.43256\t60.469902\t134.24976\t52.93461\t20.845257\t0.407556\t8.529411\t843.5\t303\t47.933334\t117.333336\t43.05263\t14.291667\t0.07633588\t50790\t0\t0.213214554\t188.3669566\t69.81338735\t12.8930632\t28.62400275\t11.28642928\t4.444512181\t25.01717494\t0.039972539\t0.051503909\n",
+      "ENST00000330331\t5\t0\t3\t0\t1\t1\t0\t0\t0\t6.5038424\t460.8994\t176.71065\t29.232716\t77.909645\t31.875208\t16.801722\t0.4282406\t2.974359\t428.6\t159.13333\t21.470589\t65.65\t24.387096\t10.769231\t0.0742942\t50790\t0\t0.213214554\t98.27046016\t37.67728248\t6.232840513\t16.61147024\t6.796258267\t3.582371668\t13.99753549\t0.071441148\t0.087660498\n",
+      "ENST00000329753\t5\t0\t36\t15\t0\t4\t3\t1\t0\t1.2925166\t128.21803\t51.82978\t6.1454315\t12.896318\t5.848835\t0.9020514\t0.2971194\t0.17667845\t113.84615\t42.653847\t3.1058824\t8.439024\t3.3\t0.13157895\t0.06544503\t50891.14814814820\t0.289408907\t0.213683941\t27.39813392\t11.07519164\t1.31318002\t2.755736051\t1.249802111\t0.192753898\t1.803283904\t2.218175403\t1.382175929\n",
+      "gunzip: error writing to output: Broken pipe\n",
+      "gunzip: Downloaded_Data/GenovoLOEUF.txt.gz: uncompress failed\n"
+     ]
+    }
+   ],
+   "source": [
+    "!gunzip -c Downloaded_Data/GenovoLOEUF.txt.gz | head -n 5"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
