--- a/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
@@ -466,6 +466,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ここから下で解析する！！"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -483,7 +490,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/06/15 06:34:46 [INFO   ] (__main__) - Annotating Screening scores...\n",
+      "2024/06/23 04:27:05 [INFO   ] (__main__) - Annotating Screening scores...\n",
       "9944\n",
       "6406\n"
      ]
@@ -650,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,11 +737,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "### Add Sample_IDs that have been solved to the true_list below \n",
     "true_list = ['Sample_20526', 'Sample_17367', 'Sample_5100', 'Sample_21599',\n",
     "            'Sample_11750', 'Sample_7528', 'Sample_2288', 'Sample_17367',\n",
     "            'Sample_11873', 'Sample_6024', 'Sample_21407', 'Sample_7605',\n",
@@ -749,7 +756,8 @@
     "            'Sample_9091', 'Sample_8436', 'Sample_4752', 'Sample_372', \n",
     "            'Sample_20468', 'Sample_9043', 'Sample_6024', 'Sample_21206',\n",
     "            'Sample_19880', 'Sample_13387', 'Sample_12988', 'Sample_12291', \n",
-    "            'Sample_11555', 'Sample_4938', 'Sample_4413', 'Sample_3986', 'Sample_2325']\n",
+    "            'Sample_11555', 'Sample_4938', 'Sample_4413', 'Sample_2325',\n",
+    "            'Sample_4938']\n",
     "\n",
     "len(true_list)\n",
     "\n",
@@ -761,19 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# cars_df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/imports-85.csv')\n",
-    "\n",
-    "# Build parcats dimensions\n",
-    "# categorical_dimensions = ['body-style', 'drive-wheels', 'fuel-type']\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,13 +864,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4549cd4f873040c9b6c1478ecb509d24",
+       "model_id": "111b8d8e1fad439994bda5f1082386f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -882,7 +878,7 @@
        "VBox(children=(ToggleButtons(description='Brush Color:', index=1, options=('None', 'Red', 'Blue', 'Orange', 'G…"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,27 +932,6 @@
     "# # Save as html\n",
     "# fig.write_html('parcats2.html')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -4848,7 +4823,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.undefined"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
