--- a/ValidationData/AUC/roc copy 5.ipynb
+++ b/ValidationData/AUC/roc copy 5.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO: Pandarallel will run on 3 workers.\n",
+      "INFO: Pandarallel will run on 7 workers.\n",
       "INFO: Pandarallel will use standard multiprocessing data transfer (pipe) to transfer data between the main process and workers.\n"
      ]
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
    "outputs": [],
    "source": [
     "df_cal = pd.DataFrame(list(scoring_calibration.items()), columns=['Candidate', 'Score'])\n",
-    "df_cal.to_csv('rsults_calibration_train.csv', index=False, sep='\\t')"
+    "# df_cal.to_csv('rsults_calibration_train.csv', index=False, sep='\\t')"
    ]
   },
   {
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1914,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3144,7 +3144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -119601,9 +119601,8 @@
          ],
          "tickvals": [
           0,
-          25,
-          50,
-          75,
+          30,
+          60,
           90
          ],
          "title": {
@@ -119623,9 +119622,8 @@
          "ticks": "",
          "tickvals": [
           0,
-          25,
-          50,
-          75,
+          30,
+          60,
           90
          ]
         }
@@ -119674,7 +119672,7 @@
     "\n",
     "# x and y ticks\n",
     "fig.update_xaxes(tickvals=[0, 1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
-    "fig.update_yaxes(tickvals=[0, 25, 50, 75, 90])\n",
+    "fig.update_yaxes(tickvals=[0, 30, 60, 90])\n",
     "\n",
     "\n",
     "# Legend position\n",
