--- a/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
@@ -490,7 +490,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/06/23 04:27:05 [INFO   ] (__main__) - Annotating Screening scores...\n",
+      "2024/07/13 05:34:29 [INFO   ] (__main__) - Annotating Screening scores...\n",
       "9944\n",
       "6406\n"
      ]
@@ -636,14 +636,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1525 + 4614\n"
+      "1538 + 4601\n"
      ]
     }
    ],
@@ -667,6 +667,35 @@
     "                   'Sample_16992', 'Sample_16970']\n",
     "\n",
     "df.loc[df['sample'].isin(solved_case_ids), 'State'] = 'Identified'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_unsolved.to_csv('~/Desktop/unsolved_cases.tsv', sep='\\t', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1333"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_unsolved['sample'].unique().tolist())"
    ]
   },
   {
@@ -4823,7 +4852,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.undefined"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
