--- a/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -33,6 +33,9 @@
     "import pysam\n",
     "from pandarallel import pandarallel\n",
     "from tqdm import tqdm\n",
+    "\n",
+    "import plotly.graph_objects as go\n",
+    "from ipywidgets import widgets\n",
     "\n",
     "### Import my modules in libs directory\n",
     "try: \n",
@@ -490,7 +493,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/07/13 05:34:29 [INFO   ] (__main__) - Annotating Screening scores...\n",
+      "2024/07/19 02:27:19 [INFO   ] (__main__) - Annotating Screening scores...\n",
       "9944\n",
       "6406\n"
      ]
@@ -636,14 +639,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1538 + 4601\n"
+      "1525 + 4614\n"
      ]
     }
    ],
@@ -675,21 +678,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_unsolved.to_csv('~/Desktop/unsolved_cases.tsv', sep='\\t', index=False)"
+    "# df_unsolved.to_csv('~/Desktop/unsolved_cases.tsv', sep='\\t', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1333"
+       "1339"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,12 +706,7 @@
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import plotly.graph_objects as go\n",
-    "from ipywidgets import widgets\n",
-    "import pandas as pd\n",
-    "import numpy as np"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
