--- a/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO: Pandarallel will run on 7 workers.\n",
+      "INFO: Pandarallel will run on 3 workers.\n",
       "INFO: Pandarallel will use standard multiprocessing data transfer (pipe) to transfer data between the main process and workers.\n"
      ]
     }
@@ -493,7 +493,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/07/19 02:27:19 [INFO   ] (__main__) - Annotating Screening scores...\n",
+      "2024/07/23 04:02:20 [INFO   ] (__main__) - Annotating Screening scores...\n",
       "9944\n",
       "6406\n"
      ]
@@ -545,6 +545,14 @@
    "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/b_/1qjd6n853xbbctck9_20_nt40000gn/T/ipykernel_34370/1136749072.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "  df.fillna('.', inplace=True)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -667,7 +675,7 @@
     "# Manual curation for wheter a case is solved or not\n",
     "\n",
     "solved_case_ids = ['Sample_4143', 'Sample_8803', 'Sample_17110', 'Sample_9768', \n",
-    "                   'Sample_16992', 'Sample_16970']\n",
+    "                   'Sample_16992', 'Sample_16970', 'Sample_']\n",
     "\n",
     "df.loc[df['sample'].isin(solved_case_ids), 'State'] = 'Identified'"
    ]
