--- a/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO: Pandarallel will run on 7 workers.\n",
+      "INFO: Pandarallel will run on 3 workers.\n",
       "INFO: Pandarallel will use standard multiprocessing data transfer (pipe) to transfer data between the main process and workers.\n"
      ]
     }
@@ -69,9 +69,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Database file /resources/DBs/gencode.v43lift37.annotation.gtf.db does not exist",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 5\u001b[0m\n\u001b[1;32m      4\u001b[0m db_anno_intron \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../../Resources/06_gffutilsdb/gencode.v43lift37.annotation.intron.gtf.db\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 5\u001b[0m db \u001b[38;5;241m=\u001b[39m \u001b[43mgffutils\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFeatureDB\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdb_anno_gencode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m db_intron \u001b[38;5;241m=\u001b[39m gffutils\u001b[38;5;241m.\u001b[39mFeatureDB(db_anno_intron)\n",
+      "File \u001b[0;32m~/miniforge3/envs/wesanno/lib/python3.9/site-packages/gffutils/interface.py:179\u001b[0m, in \u001b[0;36mFeatureDB.__init__\u001b[0;34m(self, dbfn, default_encoding, keep_order, pragmas, sort_attribute_values, text_factory)\u001b[0m\n\u001b[1;32m    178\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(dbfn):\n\u001b[0;32m--> 179\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDatabase file \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m does not exist\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m dbfn)\n\u001b[1;32m    180\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdbfn \u001b[38;5;241m=\u001b[39m dbfn\n",
+      "\u001b[0;31mValueError\u001b[0m: Database file ../../Resources/06_gffutilsdb/gencode.v43lift37.annotation.gtf.db does not exist",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m     db_anno_gencode \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/resources/DBs/gencode.v43lift37.annotation.gtf.db\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      9\u001b[0m     db_anno_intron \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/resources/DBs/gencode.v43lift37.annotation.intron.gtf.db\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m---> 10\u001b[0m     db \u001b[38;5;241m=\u001b[39m \u001b[43mgffutils\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFeatureDB\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdb_anno_gencode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m     db_intron \u001b[38;5;241m=\u001b[39m gffutils\u001b[38;5;241m.\u001b[39mFeatureDB(db_anno_intron)\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m########   Import TSVs, VCFs and GFFs   ########\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m### Downloaded database files\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m#1. Clinvar variants (BED format)\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniforge3/envs/wesanno/lib/python3.9/site-packages/gffutils/interface.py:179\u001b[0m, in \u001b[0;36mFeatureDB.__init__\u001b[0;34m(self, dbfn, default_encoding, keep_order, pragmas, sort_attribute_values, text_factory)\u001b[0m\n\u001b[1;32m    177\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    178\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(dbfn):\n\u001b[0;32m--> 179\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDatabase file \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m does not exist\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m dbfn)\n\u001b[1;32m    180\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdbfn \u001b[38;5;241m=\u001b[39m dbfn\n\u001b[1;32m    181\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconn \u001b[38;5;241m=\u001b[39m sqlite3\u001b[38;5;241m.\u001b[39mconnect(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdbfn)\n",
+      "\u001b[0;31mValueError\u001b[0m: Database file /resources/DBs/gencode.v43lift37.annotation.gtf.db does not exist"
+     ]
+    }
+   ],
    "source": [
     "########   Import genocode DBs (exon DB and intron DB)   ########\n",
     "try:\n",
@@ -477,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,14 +504,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/07/26 01:51:09 [INFO   ] (__main__) - Annotating Screening scores...\n",
+      "2024/08/01 11:08:48 [INFO   ] (__main__) - Annotating Screening scores...\n",
       "9944\n",
       "6406\n"
      ]
@@ -542,9 +560,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/b_/1qjd6n853xbbctck9_20_nt40000gn/T/ipykernel_62978/817368064.py:3: FutureWarning:\n",
+      "\n",
+      "Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -597,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -659,16 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_unsolved.to_csv('~/Desktop/unsolved_cases.tsv', sep='\\t', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +696,7 @@
        "1339"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +818,7 @@
        "1330"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,13 +830,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06bc8075fda54b87be82751dd7c81a91",
+       "model_id": "2d3b6715b2ff4f46b07ec73c406384cc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -827,7 +846,7 @@
        "              'mode': 'markers',\n",
        "              'selected': {'marker': {'color': 'firebrick'}},\n",
        "              'type': 'scatter',\n",
-       "              'uid': 'bafe7816-6b30-4b85-a07d-7eaa1e318784',\n",
+       "              'uid': '0f4e7c1f-a38c-49d3-b162-d6c87f05f3c5',\n",
        "              'unselected': {'marker': {'opacity': 0.3}},\n",
        "              'x': array([0, 0, 0, ..., 0, 0, 0]),\n",
        "              'y': array([0.01, 0.05, 0.01, ..., 0.  , 0.01, 0.01])},\n",
@@ -849,7 +868,7 @@
        "                       'colorscale': [[0, 'lightgray'], [1, 'red']],\n",
        "                       'shape': 'hspline'},\n",
        "              'type': 'parcats',\n",
-       "              'uid': 'c9327f7a-e69d-4ad4-8c4b-8628a3c2e76f'}],\n",
+       "              'uid': '6d406725-0ebe-463c-9af8-64c288e6ea97'}],\n",
        "    'layout': {'dragmode': 'lasso',\n",
        "               'height': 800,\n",
        "               'hovermode': 'closest',\n",
@@ -860,7 +879,7 @@
        "})"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,6 +939,13 @@
     "    )\n",
     "df2 = df2.loc[df2['Removed'] == 'Remain']\n",
     "\n",
+    "# Add reported case interpretation\n",
+    "df2.loc[df2['Case'] == 13920, 'Final interpretation'] = 'P (Reported)'\n",
+    "\n",
+    "# counting\n",
+    "n_knwon = len(df2.loc[df2['Known disease genes'] == 'Known'])\n",
+    "n_unknown = len(df2.loc[df2['Known disease genes'] == 'Unknown'])\n",
+    "\n",
     "n_novel = len(df2.loc[df2['Final interpretation'] == 'Novel candidate gene'])\n",
     "n_vus = len(df2.loc[df2['Final interpretation'] == 'VUS'])\n",
     "n_phenomismatch = len(df2.loc[df2['Final interpretation'] == 'Phenotype mismatch'])\n",
@@ -927,6 +953,12 @@
     "n_p_reported = len(df2.loc[df2['Final interpretation'] == 'P (Reported)'])\n",
     "n_p_novel = len(df2.loc[df2['Final interpretation'] == 'P (Novel)'])\n",
     "n_inhmismatch = len(df2.loc[df2['Final interpretation'] == 'Inheritance mismatch'])\n",
+    "\n",
+    "def add_num_to_gene_class(x) -> str:\n",
+    "    if x == 'Known':\n",
+    "        return f\"Known <br>(n = {n_knwon})\"\n",
+    "    else:\n",
+    "        return f\"Unknown <br>(n = {n_unknown})\"\n",
     "\n",
     "def add_num_to_interpretation(x) -> str:\n",
     "    if x == 'Novel candidate gene':\n",
@@ -946,6 +978,7 @@
     "    else:\n",
     "        return x\n",
     "\n",
+    "df2['Known disease genes'] = df2['Known disease genes'].apply(add_num_to_gene_class)\n",
     "df2['Final interpretation'] = df2['Final interpretation'].apply(add_num_to_interpretation)    \n",
     "\n",
     "categorical_dimensions = [\"Known disease genes\", \"Reported inheritance\", \"eLoF\", \"Priority Score\", \"Final interpretation\"]\n",
@@ -958,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,13 +1010,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e87a221bd1ec4040b9b3a6a2ffee27ea",
+       "model_id": "8d99144bd92643eba99176cd8465202a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -991,7 +1024,7 @@
        "VBox(children=(ToggleButtons(description='Brush Color:', index=1, options=('None', 'Red', 'Blue', 'Orange', 'G…"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,13 +1068,13 @@
     "fig.data[0].on_selection(update_color)\n",
     "# and parcats click\n",
     "fig.data[1].on_click(update_color)\n",
-    "fig.update_layout(margin=dict(t=20, b=20, l=30, r=120))\n",
+    "fig.update_layout(margin=dict(t=20, b=20, l=10, r=120))\n",
+    "# Update fig size\n",
+    "fig.update_layout(width=800, height=600)\n",
     "\n",
     "# Display figure\n",
     "widgets.VBox([color_toggle, fig])\n",
     "\n",
-    "# Update fig size\n",
-    "# fig.update_layout(width=5000)\n",
     "\n",
     "# Save as html\n",
     "# fig.write_html('parcats2.html')"
