--- a/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,12 +79,12 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 5\u001b[0m\n\u001b[1;32m      4\u001b[0m db_anno_intron \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../../Resources/06_gffutilsdb/gencode.v43lift37.annotation.intron.gtf.db\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 5\u001b[0m db \u001b[38;5;241m=\u001b[39m \u001b[43mgffutils\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFeatureDB\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdb_anno_gencode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m db_intron \u001b[38;5;241m=\u001b[39m gffutils\u001b[38;5;241m.\u001b[39mFeatureDB(db_anno_intron)\n",
+      "Cell \u001b[0;32mIn[4], line 5\u001b[0m\n\u001b[1;32m      4\u001b[0m db_anno_intron \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../../Resources/06_gffutilsdb/gencode.v43lift37.annotation.intron.gtf.db\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 5\u001b[0m db \u001b[38;5;241m=\u001b[39m \u001b[43mgffutils\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFeatureDB\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdb_anno_gencode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m db_intron \u001b[38;5;241m=\u001b[39m gffutils\u001b[38;5;241m.\u001b[39mFeatureDB(db_anno_intron)\n",
       "File \u001b[0;32m~/miniforge3/envs/wesanno/lib/python3.9/site-packages/gffutils/interface.py:179\u001b[0m, in \u001b[0;36mFeatureDB.__init__\u001b[0;34m(self, dbfn, default_encoding, keep_order, pragmas, sort_attribute_values, text_factory)\u001b[0m\n\u001b[1;32m    178\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(dbfn):\n\u001b[0;32m--> 179\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDatabase file \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m does not exist\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m dbfn)\n\u001b[1;32m    180\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdbfn \u001b[38;5;241m=\u001b[39m dbfn\n",
       "\u001b[0;31mValueError\u001b[0m: Database file ../../Resources/06_gffutilsdb/gencode.v43lift37.annotation.gtf.db does not exist",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m     db_anno_gencode \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/resources/DBs/gencode.v43lift37.annotation.gtf.db\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      9\u001b[0m     db_anno_intron \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/resources/DBs/gencode.v43lift37.annotation.intron.gtf.db\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m---> 10\u001b[0m     db \u001b[38;5;241m=\u001b[39m \u001b[43mgffutils\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFeatureDB\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdb_anno_gencode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m     db_intron \u001b[38;5;241m=\u001b[39m gffutils\u001b[38;5;241m.\u001b[39mFeatureDB(db_anno_intron)\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m########   Import TSVs, VCFs and GFFs   ########\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m### Downloaded database files\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m#1. Clinvar variants (BED format)\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[4], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m     db_anno_gencode \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/resources/DBs/gencode.v43lift37.annotation.gtf.db\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      9\u001b[0m     db_anno_intron \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/resources/DBs/gencode.v43lift37.annotation.intron.gtf.db\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m---> 10\u001b[0m     db \u001b[38;5;241m=\u001b[39m \u001b[43mgffutils\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFeatureDB\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdb_anno_gencode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m     db_intron \u001b[38;5;241m=\u001b[39m gffutils\u001b[38;5;241m.\u001b[39mFeatureDB(db_anno_intron)\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m########   Import TSVs, VCFs and GFFs   ########\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m### Downloaded database files\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m#1. Clinvar variants (BED format)\u001b[39;00m\n",
       "File \u001b[0;32m~/miniforge3/envs/wesanno/lib/python3.9/site-packages/gffutils/interface.py:179\u001b[0m, in \u001b[0;36mFeatureDB.__init__\u001b[0;34m(self, dbfn, default_encoding, keep_order, pragmas, sort_attribute_values, text_factory)\u001b[0m\n\u001b[1;32m    177\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    178\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(dbfn):\n\u001b[0;32m--> 179\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDatabase file \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m does not exist\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m dbfn)\n\u001b[1;32m    180\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdbfn \u001b[38;5;241m=\u001b[39m dbfn\n\u001b[1;32m    181\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconn \u001b[38;5;241m=\u001b[39m sqlite3\u001b[38;5;241m.\u001b[39mconnect(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdbfn)\n",
       "\u001b[0;31mValueError\u001b[0m: Database file /resources/DBs/gencode.v43lift37.annotation.gtf.db does not exist"
      ]
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,14 +504,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/08/01 11:08:48 [INFO   ] (__main__) - Annotating Screening scores...\n",
+      "2024/08/01 01:03:37 [INFO   ] (__main__) - Annotating Screening scores...\n",
       "9944\n",
       "6406\n"
      ]
@@ -560,17 +560,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/b_/1qjd6n853xbbctck9_20_nt40000gn/T/ipykernel_62978/817368064.py:3: FutureWarning:\n",
-      "\n",
-      "Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "\n"
+      "/var/folders/b_/1qjd6n853xbbctck9_20_nt40000gn/T/ipykernel_71212/817368064.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "  df.fillna('.', inplace=True)\n"
      ]
     },
     {
@@ -625,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +694,7 @@
        "1339"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +816,7 @@
        "1330"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,13 +828,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d3b6715b2ff4f46b07ec73c406384cc",
+       "model_id": "8038966a304940a985b7e997803706a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -846,7 +844,7 @@
        "              'mode': 'markers',\n",
        "              'selected': {'marker': {'color': 'firebrick'}},\n",
        "              'type': 'scatter',\n",
-       "              'uid': '0f4e7c1f-a38c-49d3-b162-d6c87f05f3c5',\n",
+       "              'uid': '263e7142-7f4e-4e3f-afae-509acaedfcb6',\n",
        "              'unselected': {'marker': {'opacity': 0.3}},\n",
        "              'x': array([0, 0, 0, ..., 0, 0, 0]),\n",
        "              'y': array([0.01, 0.05, 0.01, ..., 0.  , 0.01, 0.01])},\n",
@@ -868,7 +866,7 @@
        "                       'colorscale': [[0, 'lightgray'], [1, 'red']],\n",
        "                       'shape': 'hspline'},\n",
        "              'type': 'parcats',\n",
-       "              'uid': '6d406725-0ebe-463c-9af8-64c288e6ea97'}],\n",
+       "              'uid': '7d189f54-bbd5-4241-925a-cf105786ad6e'}],\n",
        "    'layout': {'dragmode': 'lasso',\n",
        "               'height': 800,\n",
        "               'hovermode': 'closest',\n",
@@ -879,7 +877,7 @@
        "})"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,7 +964,7 @@
     "    elif x == 'VUS':\n",
     "        return f\"VUS (n = {n_vus})\"\n",
     "    elif x == 'Phenotype mismatch':\n",
-    "        return f\"Phenotype mismatch (n = {n_phenomismatch})\"\n",
+    "        return f\"Mismatched phenotype (n = {n_phenomismatch})\"\n",
     "    elif x == 'LP (Novel)':\n",
     "        return f\"LP (Novel) (n = {n_lp})\"\n",
     "    elif x == 'P (Reported)':\n",
@@ -991,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1010,13 +1008,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d99144bd92643eba99176cd8465202a",
+       "model_id": "34ef38772f2142d0a2fa236ad0094969",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1024,7 +1022,7 @@
        "VBox(children=(ToggleButtons(description='Brush Color:', index=1, options=('None', 'Red', 'Blue', 'Orange', 'G…"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
